Ingress/ingress-gw.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gw
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: grafana.47fc360e217349b384cd.germanywestcentral.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana
            port: 
              number: 80
  - host: backstage.47fc360e217349b384cd.germanywestcentral.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: backstage
            port: 
              number: 80
  - host: edc.47fc360e217349b384cd.germanywestcentral.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: edc
            port: 
              number: 80

  - host: prometheus.47fc360e217349b384cd.germanywestcentral.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
  
  - host: thanos-query.47fc360e217349b384cd.germanywestcentral.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thanos-query
            port:
              number: 9090 
  
  - host: thanos.47fc360e217349b384cd.germanywestcentral.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thanos-query-frontend
            port:
              number: 80
